--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="container-fluid"><button data-toggle="collapse" data-target="#navcol-1" class="navbar-toggler"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active" href="#">Sign up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">LOG in</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">about us</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="signup.php">Sign up</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.php">LOG in</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                     </ul>
                 </div>
             </div>
