--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html" style="text-align: left;"><i class="fa fa-child"></i>&nbsp;KIDS BANK</a></div>
+        <div class="container"><a class="navbar-brand" href="home.php" style="text-align: left;"><i class="fa fa-child"></i>&nbsp;KIDS BANK</a></div>
     </nav>
     <header class="masthead" style="background-image:url('assets/img/about-bg.jpg');">
         <div class="overlay"></div>
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
-                        <h1>About Me</h1><span class="subheading">This is what I do</span>
+                        <h1>About KidsBank</h1><span class="subheading">This is what we do</span>
                     </div>
                 </div>
             </div>
@@ -42,17 +42,13 @@
         </div>
     </div>
     <hr>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto">
-                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Brand 2021</p>
-                </div>
-            </div>
+    <footer id="footer">
+        <div style= "background: #343a40; text-align: center; margin: 0px 0px 0px 0px; padding:10px">
+            <p style= "color:#eee; font-family: raleway; font-size: 14px">Copyright (c) 2021 IIITB Msc. Digital Society DT2019009 Yunmi Lee</p>
         </div>
     </footer>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html" style="text-align: left;"><i class="fa fa-child"></i>&nbsp;KIDS BANK</a></div>
+        <div class="container"><a class="navbar-brand" href="home.php" style="text-align: left;"><i class="fa fa-child"></i>&nbsp;KIDS BANK</a></div>
     </nav>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
