modify statistis funcition

--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col-md-10 col-lg-8 mx-auto">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+            <div class="col-md-10 col-lg-8 mx-auto" style="color:#eee;">
+                <p> This is a banking program for children. Children can use this site so that they learn to save and manage money. Users register an account to use the site. If a user sets a goal to save money, enter it on the site.</p>
+                <p>A number of goals can be determined for each objective, and the target amount and current savings can be tracked to show the progress status and the expected date of completion. The user can enter a transaction that uses money, and it is stored on the site and displayed. The Statistic section provides a visual summary of the entire content.</p>
+
             </div>
         </div>
     </div>
